--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,7 @@
 @import './cssLibrary/general/_base.css';
 @import './cssLibrary/general/_variables.css';
 @import './cssLibrary/general/_typography.css';
-button {
-    min-width: 150px;
-    min-height: 40px;
-    background-color: var(--color-black);
-    text-align: center;
-}
+@import './cssLibrary/components/buttons.css';
 .active {
     font-size: 20px;
     color: rgb(146, 4, 4);
