--- a/src/css/cssLibrary/components/buttons.css
+++ b/src/css/cssLibrary/components/buttons.css
@@ -1,7 +1,7 @@
 .btn {
     display: inline-block;
     padding: 10px 20px;
-    border: 1px solid var(--color-blue);
+    border: 1px solid var(--color-border);
     border-radius: 4px;
     background-color: transparent;
     cursor: pointer;
@@ -57,8 +57,6 @@
     background-color: hsl(0, 0%, 19%);
     
 }
-
-
 .blue-outline-btn {
     border-color: var(--color-blue);
     color: var(--color-blue);
