--- a/src/css/cssLibrary/general/_variables.css
+++ b/src/css/cssLibrary/general/_variables.css
@@ -4,4 +4,6 @@
     --color-red: hsl(0, 100%, 71%);
     --color-blue: hsl(240, 100%, 71%);
     --color-black: hsl(0, 0%, 29%);
+    --color-grey: hsl(0, 0%, 81%);
+    --color-border: hsl(0, 10%, 92%); 
 }
