--- a/src/css/cssLibrary/components/modal.css
+++ b/src/css/cssLibrary/components/modal.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     z-index: 1050;
-    /* display: none; */
+    display: none;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -32,4 +32,15 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+}
+.modal-header, .modal-body {
+    padding: 20px 15px 15px 15px;
+    border-bottom: 1px solid var(--color-border);
+}
+.modal-title {
+    font-weight: 500;
+    font-size: 20px;
+}
+.modal-footer {
+    padding: 20px 15px 15px 15px;
 }
