--- a/src/css/cssLibrary/general/_base.css
+++ b/src/css/cssLibrary/general/_base.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body{
-    margin-left: calc(100vw - 100%); /*no jump from scroll*/
+    margin-left: calc(100vw - 100%); /*no jump from change overflow*/
 }
 .container {
     max-width: 1440px;
