--- a/src/css/cssLibrary/components/accordion.css
+++ b/src/css/cssLibrary/components/accordion.css
@@ -13,7 +13,7 @@
     line-height: 50px;
     cursor: pointer;
 }
-.accordion:last-child {
+.accordion:nth-child(3n) {
     border-bottom:  1px solid var(--color-orange); 
 }
 .accordion-header__active {
